# dkdc

./: Cargo.toml  Dockerfile  docker-compose.yaml  instructions.md  justfile  pyproject.toml  readme.md
src/: config.rs  error.rs  main.rs  terminal.rs
src/commands/: config.rs  gif.rs  mod.rs  open.rs
src/dkdc/ui/cli/: todo.py
src/dkdc/ui/gui/: analytics.py  auth.py  calendar.py  chat.py  email.py  feedback.py  home.py  lake.py  main.py  todo.py  user_settings.py
