[package]
name = "dkdc"
version = "0.2.12"
edition = "2024"
description = "Develop knowledge, develop code"
license = "MIT"
homepage = "https://gitub.com/dkdc-io/dkdc"
repository = "https://github.com/dkdc-io/dkdc"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"

[dev-dependencies]
tempfile = "3.9.0"
